--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "firebase": "^9.0.2",
+    "firebase-admin": "^9.11.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
