--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
